# OOD-Project

./: README.md  SchoolDB_SCHEMA.md  test.md  任务列表.md  备注.md  说明.md
Management/: Management.aps  Management.cpp  Management.h  Management.rc  Management.sln  Management.vcxproj  Management.vcxproj.filters  ManagementDlg.cpp  ManagementDlg.h  Testdlg.cpp  Testdlg.h  resource.h
Management/Management/x64/Debug/: Management.exe.recipe  Management.ilk  Management.res  vc143.idb
Management/Management/x64/Debug/Management.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Management.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Management/Management/x64/Release/: Management.exe.recipe  Management.iobj  Management.ipdb  Management.res
Management/Management/x64/Release/Management.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Management.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
project - 副本 (2)/frontend/src/router/: index.ts  role-map.ts
project - 副本 (2)/frontend/src/views/Layouts/: RoleLayout.vue
project - 副本 (2)/frontend/src/views/Login/: loginPage.vue
project - 副本/backend/: .env  SchoolDB.sql  SchoolDB_readme.md  pnpm-lock.yaml
project - 副本/frontend/src/api/: user.ts
project - 副本/frontend/src/router/: index.ts  role-map.ts
project - 副本/frontend/src/utils/: request.ts
project - 副本/frontend/src/views/Layouts/: MainLayout.vue  RoleLayout.vue
project - 副本/frontend/src/views/Login/: loginPage.vue
project/backend/: .env  CMakeLists.txt  SchoolDB.sql  db_schema_mssql.sql  db_schema_notes.md  package.json  pnpm-lock.yaml  restaurant_db.sql  server.js
project/backend/cpp/: main.cpp
project/backend/routes/: auth.js  users.js
project/frontend/src/: App.vue
project/frontend/src/api/: user.ts  userManage.ts
project/frontend/src/router/: index.ts  role-map.ts
project/frontend/src/stores/: user.ts
project/frontend/src/views/Layouts/: RoleLayout.vue
project/frontend/src/views/Login/: loginPage.vue
project/frontend/src/views/manager/: manageInfo.vue
project/frontend/src/views/member/: Index.vue
restaurant/backend/: package-lock.json
restaurant/backend/cpp/: main.cpp
restaurant/backend/routes/: auth.js  users.js
restaurant/frontend/src/api/: userManage.ts
restaurant/frontend/src/router/: index.ts
restaurant/frontend/src/utils/: request.ts
restaurant/frontend/src/views/manager/: manageInfo.vue
